// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query tests query000: "* | count()" 1`] = `
Array [
  "count",
  "30",
]
`;

exports[`Query tests query001: "* | count() by _path | sort _path" 1`] = `
Array [
  "_path",
  "count",
  "capture_loss",
  "1",
  "conn",
  "19",
  "dns",
  "2",
  "files",
  "4",
  "ssl",
  "1",
  "stats",
  "1",
  "weird",
  "1",
  "x509",
  "1",
]
`;

exports[`Query tests query002: "_path=conn | count()" 1`] = `
Array [
  "count",
  "19",
]
`;

exports[`Query tests query003: "_path=conn | cut ts, id.orig_h, id.orig_p, id.resp_h, id.resp_p, proto | sort ts" 1`] = `
Array [
  "ts",
  "id.orig_h",
  "id.orig_p",
  "id.resp_h",
  "id.resp_p",
  "proto",
  "02/25/2016:0305.9830",
  "192.168.1.110",
  "56625",
  "172.217.9.142",
  "443",
  "tcp",
  "02/25/2016:0306.1540",
  "192.168.1.110",
  "57591",
  "172.217.9.142",
  "443",
  "tcp",
  "02/25/2016:0307.7150",
  "192.168.1.110",
  "55635",
  "18.246.31.137",
  "443",
  "tcp",
  "02/25/2016:0307.7150",
  "192.168.1.110",
  "55747",
  "13.52.5.22",
  "443",
  "tcp",
  "02/25/2016:0308.2100",
  "192.168.1.110",
  "55344",
  "52.37.243.173",
  "443",
  "tcp",
  "02/25/2016:0308.3340",
  "192.168.1.110",
  "55346",
  "52.37.243.173",
  "443",
  "tcp",
  "02/25/2016:0308.4490",
  "192.168.1.110",
  "57326",
  "173.194.201.189",
  "443",
  "tcp",
  "02/25/2016:0308.4720",
  "192.168.1.110",
  "57487",
  "192.30.253.125",
  "443",
  "tcp",
  "02/25/2016:0308.8070",
  "192.168.1.110",
  "55354",
  "52.37.243.173",
  "443",
  "tcp",
  "02/25/2016:0309.4400",
  "192.168.1.179",
  "47783",
  "192.168.1.255",
  "15600",
  "udp",
  "02/25/2016:0310.2640",
  "192.168.1.110",
  "57332",
  "64.233.179.189",
  "443",
  "tcp",
  "02/25/2016:0310.9380",
  "192.168.1.110",
  "55351",
  "18.205.93.211",
  "443",
  "tcp",
  "02/25/2016:0311.2750",
  "192.168.1.110",
  "54375",
  "192.168.1.254",
  "53",
  "udp",
  "02/25/2016:0312.8600",
  "192.168.1.110",
  "57635",
  "17.125.252.5",
  "443",
  "tcp",
  "02/25/2016:0313.9780",
  "192.168.1.110",
  "51848",
  "192.168.1.254",
  "53",
  "udp",
  "02/25/2016:0313.9960",
  "192.168.1.110",
  "57640",
  "209.216.230.240",
  "443",
  "tcp",
  "02/25/2016:0315.4810",
  "192.168.1.179",
  "51524",
  "192.168.1.255",
  "15600",
  "udp",
  "02/25/2016:0315.7840",
  "192.168.1.110",
  "57572",
  "172.217.6.138",
  "443",
  "tcp",
  "02/25/2016:0315.9860",
  "192.168.1.110",
  "57540",
  "172.217.1.138",
  "443",
  "tcp",
]
`;

exports[`Query tests query004: "* | every 2s count() | sort ts" 1`] = `
Array [
  "ts",
  "count",
  "02/25/2016:0304.0000",
  "2",
  "02/25/2016:0306.0000",
  "4",
  "02/25/2016:0308.0000",
  "6",
  "02/25/2016:0310.0000",
  "4",
  "02/25/2016:0312.0000",
  "4",
  "02/25/2016:0314.0000",
  "9",
  "02/25/2016:0316.0000",
  "1",
]
`;

exports[`Query tests query005: "* | every 2s count() by _path | sort ts, _path" 1`] = `
Array [
  "ts",
  "_path",
  "count",
  "02/25/2016:0304.0000",
  "conn",
  "1",
  "02/25/2016:0304.0000",
  "stats",
  "1",
  "02/25/2016:0306.0000",
  "conn",
  "3",
  "02/25/2016:0306.0000",
  "weird",
  "1",
  "02/25/2016:0308.0000",
  "conn",
  "6",
  "02/25/2016:0310.0000",
  "conn",
  "3",
  "02/25/2016:0310.0000",
  "dns",
  "1",
  "02/25/2016:0312.0000",
  "conn",
  "3",
  "02/25/2016:0312.0000",
  "dns",
  "1",
  "02/25/2016:0314.0000",
  "conn",
  "3",
  "02/25/2016:0314.0000",
  "files",
  "4",
  "02/25/2016:0314.0000",
  "ssl",
  "1",
  "02/25/2016:0314.0000",
  "x509",
  "1",
  "02/25/2016:0316.0000",
  "capture_loss",
  "1",
]
`;
